//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  role Role [not null, default: 'USER']
  acceptedPrivacyPolicy Boolean [not null, default: false]
  cart Cart
  orders Order [not null]
  products Product [not null]
}

Table Cart {
  id Int [pk, increment]
  userId Int [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  items CartItem [not null]
}

Table CartItem {
  id Int [pk, increment]
  cartId Int [not null]
  productId Int [not null]
  variantId Int [not null]
  quantity Int [not null, default: 1]
  cart Cart [not null]
  product Product [not null]
  variant Variant [not null]

  indexes {
    (cartId, productId, variantId) [unique]
  }
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  price Float [not null]
  userId Int [not null]
  stock Int [not null, default: 1]
  categoryId Int
  createdAt DateTime [default: `now()`, not null]
  sold Boolean [not null, default: false]
  cartItems CartItem [not null]
  orderItems OrderItem [not null]
  category Category
  user User [not null]
  variants Variant [not null]
}

Table Variant {
  id Int [pk, increment]
  size String [not null]
  color String [not null]
  stock Int [not null, default: 0]
  productId Int [not null]
  cartItems CartItem [not null]
  product Product [not null]
}

Table Category {
  id Int [pk, increment]
  name String [unique, not null]
  products Product [not null]
}

Table Order {
  id Int [pk, increment]
  totalPrice Float [not null]
  status String [not null, default: 'pending']
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  items OrderItem [not null]
}

Table OrderItem {
  id Int [pk, increment]
  quantity Int [not null]
  productId Int [not null]
  orderId Int [not null]
  order Order [not null]
  product Product [not null]
}

Enum Role {
  USER
  ADMIN
}

Ref: Cart.userId - User.id

Ref: CartItem.cartId > Cart.id

Ref: CartItem.productId > Product.id

Ref: CartItem.variantId > Variant.id

Ref: Product.categoryId > Category.id

Ref: Product.userId > User.id

Ref: Variant.productId > Product.id

Ref: Order.userId > User.id

Ref: OrderItem.orderId > Order.id

Ref: OrderItem.productId > Product.id